algunos cambios visuales nomas no son todos

--- a/AudioTec/AudioTec.csproj
+++ b/AudioTec/AudioTec.csproj
@@ -101,6 +101,12 @@
     <Compile Include="Modelo\Orden.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="Iconos\iconoIdentificacion.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Iconos\imagenReparacion.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Resources\PlantillaAudioTec.html" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
