--- a/AudioTec/AudioTec.csproj
+++ b/AudioTec/AudioTec.csproj
@@ -101,12 +101,21 @@
     <Compile Include="Modelo\Orden.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VentanaEmergenteDatos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VentanaEmergenteDatos.Designer.cs">
+      <DependentUpon>VentanaEmergenteDatos.cs</DependentUpon>
+    </Compile>
     <Content Include="Iconos\iconoIdentificacion.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Iconos\imagenReparacion.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="VentanaEmergenteDatos.resx">
+      <DependentUpon>VentanaEmergenteDatos.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Resources\PlantillaAudioTec.html" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
