--- a/AudioTec/AudioTec.csproj
+++ b/AudioTec/AudioTec.csproj
@@ -110,6 +110,9 @@
     <Content Include="Iconos\iconoIdentificacion.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Iconos\imagenOpciones.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Iconos\imagenReparacion.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
